rust/macros/tests/ui/fail/duplicate_roles.rs
use telltale_macros::choreography;

choreography! {
    protocol Bad {
        roles A, A;
        A -> A: Ping;
    }
}

fn main() {}
